--- a/_posts/2020-01-03-the-us-narrative-today.html
+++ b/_posts/2020-01-03-the-us-narrative-today.html
@@ -1397,107 +1397,107 @@ stories:
   domain: http://www.wallowa.com/chieftain/
   link: https://www.wallowa.com/news/lower-snake-river-dams-map/image_eee56e02-2db5-11ea-adba-6f8abaef3d94.html
 images:
-- name: store-on-corner-store-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-space-pizza.jpg
-- name: dragon_close-up-wreck.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-wreck.jpg
-- name: subway-subway-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-marcel-duchamp.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-monet-one.jpg
-- name: meadowbutterfly-meadow-butterfly-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-bright-sand.jpg
-- name: dragon_close-up-scream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-scream.jpg
-- name: mosaic-face-mosaic-face-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dali-two.jpg
-- name: liberty-back-statue-liberty-back-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-plentiful.jpg
-- name: amusement-park-amusement-park-2-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-rainbow-festival.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-monet-one.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-monet-one.JPG
-- name: stalin-time-seattle-public-market_36725946605_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-seattle-public-market_36725946605_o.jpg
-- name: gypsymosaic-gypsy-eyes-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-atari-missle.jpg
-- name: crow_neo_instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_neo_instinct.jpg
-- name: beach-rocks-beach-rocks-currents-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-green-zuma.jpg
-- name: razorcliff-razorcliff-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-colorful-dream.jpg
-- name: copper-circuit-street-car-san-francisco.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-street-car-san-francisco.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-spagetti-accident.jpg
-- name: legal-statue-legalstatue-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-aqua.jpg
-- name: sand-hand-sand-hand-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-internet-numbers.jpg
-- name: razorwire-DSC-0080-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-blue-electricity.jpg
-- name: aws-s3-stories-death-valley-national-park-dali-three-just-road.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-death-valley-national-park-dali-three-just-road.jpg
-- name: eduardo-eduardo-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-crafty-painting.jpg
-- name: subway-subway-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-yellow-collage.jpg
-- name: carry-load-carryload-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-dark-dali.jpg
-- name: aws-s3-stories-mosaic-face-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-mosaic-face-blue-circuit.jpg
-- name: yosemite-yosemite-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-smoking-cigarette.jpg
-- name: castle-wall-DSC-0067-blue-circuit-5.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-circuit-5.JPG
-- name: stalin-time-los-angeles-downtown-from-afar.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-los-angeles-downtown-from-afar.jpg
-- name: abe-lincoln-one-yellow-collage-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-collage-file-00-00-07-91.jpg
-- name: hollywood-building-hollywood-building-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-electricity.jpg
-- name: copper-circuit-graffitti-red-hat-man.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-graffitti-red-hat-man.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-kand-two.jpg
-- name: stalin-time-san-pedro-light-cities.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-san-pedro-light-cities.jpg
-- name: art-museum-art-museum-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-emily-carr.jpg
-- name: border-fence-border-fence-on-hill-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-mucha-mult.jpg
-- name: stories-freeway-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-freeway-atari-missle.jpg
-- name: yosemite-yosemite-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-ww2-color.jpg
-- name: art-museum-art-museum-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-satan-red.jpg
-- name: oldcabin-oldcabin-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-ww2-dresden.jpg
-- name: legal-statue-legalstatue-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-internet-numbers.jpg
-- name: birdhouse-birdhouse-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-atari-missle.jpg
-- name: docks-docks-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-umberto-bocc.jpg
-- name: store-on-corner-oldcabin-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-green-zuma.jpg
-- name: rain-princess-IMG_2971.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_2971.jpg
-- name: birdhouse-birdhouse-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-constitution.jpg
-- name: berlinwall-DSC-0084-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-alien-goggles.jpg
-- name: oldsmallboat-oldsmallboat-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-umberto-bocc.jpg
-- name: powerlines-power-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-atari-asteroids.jpg
-- name: la-muse-eagle-spread-tree-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-eagle-spread-tree-2.jpg
-- name: berlinwall-DSC-0084-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-ww2-color.jpg
-- name: old-door-lock-old-door-lock-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-ww2-color.jpg
+- name: locked-up-steam-lock-up-steam-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-smoking-cigarette.jpg
+- name: server-cloud-server-racks-clouds-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-purple-storm.jpg
+- name: mosaic-face-mosaic-face-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-china-prop.jpg
+- name: fence-mexico-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-oily-mcoilface.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-cinnamon-rolls.jpg
+- name: aws-s3-stories-new-20-132-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-20-132-800-500-0-max-0-1--1.jpg
+- name: oldtrain-oldtrain-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-oily-mcoilface.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-purple-pond.jpg
+- name: la-muse-dark-city-buildings.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-dark-city-buildings.jpg
+- name: powerlines-power-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dark-soul.jpg
+- name: carry-load-carryload-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-purple-storm.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-yellow-collage.jpg
+- name: adam-smith-adam-smith-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-yellow-paper.jpg
+- name: mediterranean-mediterranean-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-spagetti-accident.jpg
+- name: dc-statue-dcstatue-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-monet-one.jpg
+- name: server-cloud-server-racks-clouds-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-post-modern.jpg
+- name: oldtrain-oldtrain-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-attack-planes.jpg
+- name: crow-crow-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-marcel-duchamp.jpg
+- name: walled-garden-walled-garden-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-attack-planes.jpg
+- name: power-lines-power-lines-empty-space-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-atari-asteroids.jpg
+- name: locked-up-steam-lock-up-steam-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-granite.jpg
+- name: oldhouse-oldhouse-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-alberto-giacometti.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit.png
+- name: san-francisco-street-view-san-francisco-street-view-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-sunday.jpg
+- name: border-fence-border-fence-on-hill-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-graham-sutherland.jpg
+- name: locked-up-steam-lock-up-steam-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-horiz-circuit.jpg
+- name: window-window-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-purp-paper.jpg
+- name: old-cabin-oldcabin-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-atari-missle.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit-2.jpg
+- name: powerlines-power-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-blue-electricity.jpg
+- name: abandonedbuildings_dali_three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dali_three.jpg
+- name: server-cloud-server-racks-clouds-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-feed-people.jpg
+- name: store-on-corner-store-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-post-modern.jpg
+- name: locked-up-steam-lock-up-steam-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-smooth-ride.jpg
+- name: oldcabin-store-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-post-modern.jpg
+- name: oldroad-old-road-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-cinnamon-rolls.jpg
+- name: subway-subway-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-smoking-cigarette.jpg
+- name: copper-circuit-statue-of-liberty-front-bright.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-of-liberty-front-bright.jpg
+- name: aws-s3-kerbypeak-kerbypeak-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-kerbypeak-kerbypeak-still.jpg
+- name: braceros-domingo-ulloa-castle-clouds-green-lawn.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-castle-clouds-green-lawn.jpg
+- name: udnie-IMG_8355.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8355.jpg
+- name: carry-load-carryload-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-emily-carr.jpg
+- name: rain-princess-IMG_7788.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7788.jpg
+- name: docks-docks-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-purple-storm.jpg
+- name: death-valley-death-valley-national-park.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park.jpg
+- name: stories-los-angeles-downtow-freeway-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-los-angeles-downtow-freeway-blue-circuit-5.jpg
+- name: la-muse-ellis-island-windows.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-ellis-island-windows.jpg
+- name: copper-circuit-face-eyes-shut-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-face-eyes-shut-statue.jpg
+- name: fence-fence-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dark-rain.jpg
+- name: fence-mexico-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-smooth-ride.jpg
+- name: containership-containership-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-yellow-collage.jpg
 ---
 Elon Musk Tweets New SpaceX Flight Simulation Video.&nbsp;Congress Divided Over Airstrike Killing Iranian Official.&nbsp;Baton Rouge Could Be Key Player In Developing Disruptive Technology Platform.&nbsp;Leesburg Man Dies Following November Car Crash.&nbsp;Retired Police Dog Last Seen In Olivehurst.&nbsp;Burned House To Be Demolished.&nbsp;Hoosiers Falter Late In Gator Bowl Loss.&nbsp;Voters Have New Leeway On Sales Tax In Granite Shoals.&nbsp;
